<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="sharedUserLabel">Android Core Apps</string>
    <string name="contactsList">Contacts</string>
    <string name="launcherDialer">Phone</string>
    <string name="shortcutContact">Contact</string>
    <string name="shortcutDialContact">Direct dial</string>
    <string name="shortcutMessageContact">Direct message</string>
    <string name="shortcutActivityTitle">Choose a contact shortcut</string>
    <string name="callShortcutActivityTitle">Choose a number to call</string>
    <string name="messageShortcutActivityTitle">Choose a number to message</string>
    <string name="starredList">Starred</string>
    <string name="frequentList">Frequent</string>
    <string name="strequentList">Favorites</string>
    <string name="viewContactTitle">Contact details</string>
    <string name="viewContactDesription">View contact</string>
    <string name="editContactDescription">Edit contact</string>
    <string name="insertContactDescription">Create contact</string>
    <string name="searchHint">Search contacts</string>
    <string name="menu_mark_all">Mark All</string>
    <string name="menu_unmark_all">UnMark All</string>
    <string name="menu_search">Search</string>
    <string name="menu_newContact">New contact</string>
    <string name="menu_blacklist">Blacklist</string>
    <string name="menu_viewContact">View contact</string>
    <string name="menu_callNumber">Call <xliff:g id="name">%s</xliff:g></string>
    <string name="menu_addStar">Add to Favorites</string>
    <string name="menu_removeStar">Remove from favorites</string>
    <string name="menu_editContact">Edit contact</string>
    <string name="menu_deleteContact">Delete contact</string>
    <string name="menu_call">Call contact</string>
    <string name="menu_sendSMS">Text contact</string>
    <string name="menu_sendEmail">Send email</string>
    <string name="menu_viewAddress">Map address</string>
    <string name="menu_makeDefaultNumber">Make default number</string>
    <string name="menu_cancelDefaultNumber">Cancel default number</string>
    <string name="menu_makeDefaultEmail">Make default email</string>
    <string name="menu_cancelDefaultEmail">Cancel default email</string>
    <string name="menu_shareNumber">Share number</string>
    <string name="menu_shareEmail">Share email</string>
    <string name="menu_shareAddress">Share address</string>
    <string name="menu_splitAggregate">Separate</string>
    <string name="contactsSplitMessage">Contacts separated</string>
    <string name="splitConfirmation_title">Separate Contact</string>
    <string name="splitConfirmation">Are you sure you want to separate this single contact
        into multiple contacts: one for each set of contact information that was joined into it?
    </string>
    <string name="menu_joinAggregate">Join</string>
    <string name="titleJoinContactDataWith">Join contacts</string>
    <string name="blurbJoinContactDataWith">Select the contact you want to join with <xliff:g id="name">%s</xliff:g>.</string>
    <string name="showAllContactsJoinItem">Show all contacts</string>
    <string name="separatorJoinAggregateSuggestions">Suggested contacts</string>
    <string name="separatorJoinAggregateAll">All contacts</string>
    <string name="contactsJoinedMessage">Contacts joined</string>
    <string name="menu_contactOptions">Options</string>
    <string name="contactOptionsTitle">Options</string>
    <string name="deleteConfirmation_title">Delete</string>
    <string name="clearConfirmation_title">Clear call log</string>
    <string name="readOnlyContactWarning">You cannot delete contacts from read-only accounts, but you can hide them in your contacts lists.</string>
    <string name="readOnlyContactDeleteConfirmation">This contact contains information from multiple accounts. Information from read-only accounts will be hidden in your contacts lists, not deleted.</string>
    <string name="multipleContactDeleteConfirmation">Deleting this contact will delete information from multiple accounts.</string>
    <string name="deleteConfirmation">This contact will be deleted.</string>
    <string name="clearLogConfirmation">All call log entries will be removed.</string>
    <string name="menu_done">Done</string>
    <string name="menu_doNotSave">Revert</string>
    <string name="editContact_title_edit">Edit contact</string>
    <string name="editContact_title_insert">New contact</string>
    <string name="label_phonetic_name">Phonetic</string>
    <string name="label_notes">Notes</string>
    <string name="label_sip_address">Internet call</string>
    <string name="label_ringtone">Ringtone</string>
    <string name="ghostData_name">First and Last</string>
    <string name="ghostData_phonetic_name">Phonetic name</string>
    <string name="ghostData_company">Company</string>
    <string name="ghostData_title">Title</string>
    <string name="invalidContactMessage">The contact does not exist.</string>
    <string name="pickerNewContactHeader">Create new contact</string>
    <string name="selectLabel">Select label</string>
    <string name="phoneLabelsGroup">Phone</string>
    <string name="emailLabelsGroup">Email</string>
    <string name="imLabelsGroup">IM</string>
    <string name="postalLabelsGroup">Postal address</string>
    <string-array name="otherLabels">
        
        <item>Organization</item>
        
        <item>Note</item>
    </string-array>
    <string name="photoPickerNotFoundText">No pictures are available on the phone.</string>
    <string name="attachToContact">Contact icon</string>
    <string name="customLabelPickerTitle">Custom label name</string>
    <string name="menu_displayGroup">Display options</string>
    <string name="displayGroups">Display options</string>
    <string name="send_to_voicemail_checkbox">Send calls directly to voicemail</string>
    <string name="default_ringtone">Default</string>
    <string name="changePicture">Change icon</string>
    <string name="removePicture">Remove icon</string>
    <string name="noContacts">No contacts.</string>
    <string name="noMatchingContacts">No matching contacts found.</string>
    <string name="noContactsWithPhoneNumbers">You do not have contacts, please create a new contact or import your contacts from the SD card / SIM card.</string>
    <string name="showFilterPhones">Only contacts with phones</string>
    <string name="showFilterPhonesDescrip">Only display contacts that have phone numbers</string>
    <string name="headerContactGroups">Choose contacts to display</string>
    <plurals name="groupDescrip">
        <item quantity="other"><xliff:g id="count">%0$d</xliff:g> contacts</item>
    </plurals>
    <plurals name="groupDescripPhones">
        <item quantity="other"><xliff:g id="count">%1$d</xliff:g> contacts, <xliff:g id="countWithPhones">%2$d</xliff:g> with phones</item>
    </plurals>
    <string name="savingContact">Saving contact\u2026</string>
    <string name="savingDisplayGroups">Saving display options\u2026</string>
    <string name="contactSavedToast">Contact saved.</string>
    <string name="contactSavedErrorToast">Error, unable to save contact changes.</string>
    <plurals name="listTotalPhoneContacts">
        <item quantity="one">Displaying 1 contact with phone number</item>
        <item quantity="other">Displaying <xliff:g id="count">%d</xliff:g> contacts with phone numbers</item>
    </plurals>
    <string name="listTotalPhoneContactsZero">No visible contacts with phone numbers</string>
    <plurals name="listTotalAllContacts">
        <item quantity="one">Displaying 1 contact</item>
        <item quantity="other">Displaying <xliff:g id="count">%d</xliff:g> contacts</item>
    </plurals>
    <string name="listTotalAllContactsZero">No visible contacts</string>
    <plurals name="listFoundAllContacts">
        <item quantity="one">Found 1 contact</item>
        <item quantity="other">Found <xliff:g id="count">%d</xliff:g> contacts</item>
    </plurals>
    <string name="listFoundAllContactsZero">Contact not found</string>
    <plurals name="searchFoundContacts">
        <item quantity="one">1 contact</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> contacts</item>
    </plurals>
    <string name="contactsIconLabel">Contacts</string>
    <string name="contactsFavoritesLabel">Favorites</string>
    <string name="dialerIconLabel">Phone</string>
    <string name="recentCallsIconLabel">Call log</string>
    <string name="liveFolderAll">All contacts</string>
    <string name="liveFolderFavorites">Starred contacts</string>
    <string name="liveFolderPhone">Contacts with phone numbers</string>
    <string name="menu_sendTextMessage">Send text message</string>
    <string name="recentCalls_callNumber">Call <xliff:g id="name">%s</xliff:g></string>
    <string name="recentCalls_editNumberBeforeCall">Edit number before call</string>
    <string name="recentCalls_addToBlacklist">Add to Blacklist</string>
    <string name="recentCalls_addToContact">Add to contacts</string>
    <string name="recentCalls_removeFromRecentList">Remove from call log</string>
    <string name="import_from_sim">Import from SIM card</string>
    <string name="import_from_sdcard" product="default">Import from SD card</string>
    <string name="export_to_sdcard" product="default">Export to SD card</string>
    <string name="share_visible_contacts">Share visible contacts</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_import_export">Import/Export</string>
    <string name="fav_clear_freq">clear frequent contacts</string>
    <string name="has_not_been_set">Has not been set</string>
    <string name="ip_prefix_description">IP prefix</string>
    <string name="auto_ip_call_headline">IP call</string>
    <string name="auto_ip_call_description">Automatically add IP number when dialing phone numbers.</string>
    <string name="my_number_location_description">My number location</string>
    <string name="template_save">Save</string>
    <string name="template_insert_hint">Insert here the template text</string>
    <string name="template_explanation">Insert or modify the template text and optionally draw a gesture to associate it</string>
    <string name="template_gesture_draw">Draw the gesture in the space below</string>
    <string name="menu_del_contacts">Delete contacts</string>
    <string name="menu_labi_sync">Sync contacts</string>
    <string name="menu_merge_duplicated">Merge duplicated contacts</string>
    <string name="merge">Merge</string>
    <string name="previous">Pre</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="show_yiliao_number">Phone number</string>
    <string name="menu_settings">Contacts settings</string>
    <string name="contacts_show_option_label">Display options</string>
    <string name="contacts_account_settings_label">Account settings</string>
	<string name="menu_manually_refresh">Manually refresh</string>
	<string name="menu_close_lw_msg">Close data message</string>
	<string name="prefs_contact_management_title">Contact management</string>
	<string name="message_ims_user_service_open">Join now</string>
	<string name="message_ims_user_service_to_later">Remind later</string>
	<string name="message_ims_user_service_message_info">Free information service is more powerful than ordinary information, voice intercom chat network easily with online contacts, text chat, save money to send pictures and other multimedia information and communication experience unlimited fun.</string>
	<string name="addblack_dec">Remark(Optional)</string>
	<string name="importsms_black">Import all sms of the number</string>
    <string name="ims_ip_call_description">Smart IP call</string>
    <string name="not_use_ip_call_description">Not use IP numbers</string>
    <string name="long_distance_call">make long distance call</string>
</resources>