<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:orientation="vertical"
          android:padding="10dp"  >
		<ListView
			android:id="@android:id/list"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:cacheColorHint="@null"
			android:divider="@null"
			android:listSelector="@null" />

		<EditText 
			android:id="@+id/descript_text" 
			android:layout_height="wrap_content" 
			android:layout_width="match_parent" 
			android:hint="@string/addblack_dec"/>

		<CheckBox 
			android:id="@+id/isaddsmstoblack" 
			android:text="@string/importsms_black" 
			android:visibility="gone"
			android:checked="true"
			android:layout_width="match_parent" 
			android:layout_height="wrap_content" />

	    </LinearLayout>
			
    </FrameLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
    >
        <Button android:id="@+id/btn_done"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:text="@string/ok"
            android:background="@android:drawable/item_background_holo_dark_left"
            android:shadowColor="#ffffffff"
            android:shadowDx="1.0"
            android:shadowDy="-1.2"
            android:shadowRadius="1.0"
        />

        <Button android:id="@+id/btn_discard"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:text="@string/cancel"
            android:background="@android:drawable/item_background_holo_dark_right"
            android:shadowColor="#ffffffff"
            android:shadowDx="1.0"
            android:shadowDy="-1.2"
            android:shadowRadius="1.0"
        />

    </LinearLayout>
    
</LinearLayout>
