<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">
	
	<LinearLayout 
        android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical">
		
		<LinearLayout 
	        android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dip"
			android:layout_marginBottom="15dip"
			android:layout_marginLeft="15dip"
			android:layout_marginRight="10dip"
			android:gravity="center_horizontal">
			
			<TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/message_ims_user_service_message_info"	
		        android:textAppearance="?android:attr/textAppearanceMediumInverse"
		        android:gravity="center_vertical"
		        android:layout_gravity="center_vertical"		        
		        android:textColor="@color/main_text_color"/>
		</LinearLayout>
		
		<LinearLayout 
	        android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dip"
			android:layout_marginBottom="20dip"
			android:layout_marginLeft="20dip"
			android:layout_marginRight="20dip"
			android:gravity="center_horizontal">
			
		    <ImageView
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:layout_gravity="center_horizontal"
	           android:src="@drawable/ims_user_pre_view" />
		</LinearLayout>
		
		<LinearLayout 
	        android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dip"
			android:layout_marginBottom="10dip"
			android:layout_marginLeft="20dip"
			android:layout_marginRight="20dip"
			android:gravity="left">
			
		    <TextView
		       	android:id="@+id/check_user_protocl"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:gravity="center_vertical"
		        android:layout_gravity="center_vertical"
		        android:textAppearance="?android:attr/textAppearanceMediumInverse"
		        android:textColor="#ff80C0E8"/>
		</LinearLayout>		    
	</LinearLayout>
	    
	<LinearLayout 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:orientation="horizontal" 
		android:layout_gravity="center_vertical|bottom"
		android:layout_alignParentBottom="true" 
		android:gravity="center" >
		
		<Button
			android:id="@+id/free_message_opening"
			android:layout_height="wrap_content"
            android:layout_width="0dip"
			android:layout_weight="1"
			android:layout_marginTop="4dip"
			android:layout_centerHorizontal="true" 
			android:text="@string/message_ims_user_service_open"
			android:background="@android:drawable/item_background_holo_dark_left"
			android:shadowColor="#ffffffff"
            android:shadowDx="1.0"
            android:shadowDy="-1.2"
            android:shadowRadius="1.0"
			android:textAppearance="?android:attr/textAppearanceMediumInverse"/>
		
        <Button
            android:id="@+id/free_message_to_later"
            android:layout_width="0dip"
			android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dip"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:shadowColor="#ffffffff"
            android:background="@android:drawable/item_background_holo_dark_right"
            android:shadowDx="1.0"
            android:shadowDy="-1.2"
            android:shadowRadius="1.0"
            android:text="@string/message_ims_user_service_to_later" />  				
	</LinearLayout>	
</RelativeLayout>